fix notification on small screen

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -142,6 +142,16 @@ a{
 	z-index:1;
 }
 @media (max-width:50000px) and (min-width:1200px){
+	.notification{
+		position:fixed;
+		top:0;
+		width:100%;
+		height:11rem;
+		background-color:$red;
+		opacity:0.9;
+		text-align:center;
+		font-size:4rem;
+	}
 	.devise{
 		padding-bottom:2rem;
 		background-color:$white;
@@ -283,6 +293,16 @@ a{
 	}
 }
 @media (max-width:1199px) and (min-width:1000px){
+	.notification{
+		position:fixed;
+		top:0;
+		width:100%;
+		height:11rem;
+		background-color:$red;
+		opacity:0.9;
+		text-align:center;
+		font-size:4rem;
+	}
 	.devise{
 		padding-bottom:2rem;
 		background-color:$white;
@@ -416,6 +436,19 @@ a{
 }
 
 @media (max-width:999px) and (min-width:200px){
+	.notification{
+		position:fixed;
+		top:0;
+		width:100%;
+		height:11rem;
+		padding-left:3rem;
+		padding-right:3rem;
+		background-color:$red;
+		opacity:0.9;
+		text-align:center;
+		font-size:2.5rem;
+		z-index:100001;
+	}
 	.devise{
 		padding-bottom:2rem;
 		background-color:$white;
@@ -567,17 +600,6 @@ a{
 }
 
 
-
-.notification{
-	position:fixed;
-	top:0;
-	width:100%;
-	height:11rem;
-	background-color:$red;
-	opacity:0.9;
-	text-align:center;
-	font-size:4rem;
-}
 .topic{
 	width:90%;
 	height:30px;
